--- a/.github/workflows/publish-base-image.yml
+++ b/.github/workflows/publish-base-image.yml
@@ -2,35 +2,31 @@ name: Publish Base Docker Image to GHCR
 
 on:
   push:
+    branches: [main]
     paths:
-      - "Dockerfile" # Adjust as needed (e.g., Dockerfile.base)
+      - "Dockerfile"
       - ".github/workflows/publish-base-image.yml"
-    branches:
-      - main # Or your default branch
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
-    permissions:
-      packages: write
-      contents: read
-
     steps:
-      - name: 🔄 Checkout repo
+      - name: 🔄 Checkout
         uses: actions/checkout@v4
 
-      - name: 🛠️ Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: 🔐 Login to GHCR
+      - name: 🔐 Login to GHCR using PAT
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PAT }}
 
-      - name: 🏷️ Extract version from Git tag or fallback
+      - name: 🏷️ Extract version from Git tag
         id: metadata
         run: |
           TAG=$(git describe --tags --always)
@@ -40,8 +36,8 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile # Update if using a custom Dockerfile
+          file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/base-image:latest
-            ghcr.io/${{ github.repository_owner }}/base-image:${{ steps.metadata.outputs.tag }}
+            ghcr.io/raghurammutya/base-image:latest
+            ghcr.io/raghurammutya/base-image:${{ steps.metadata.outputs.tag }}
